--- a/Web/pitt-menu/src/App.css
+++ b/Web/pitt-menu/src/App.css
@@ -1,33 +1,85 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.header-content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 65%;
+  margin: auto;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+}
+.nav-list div {
+  margin: 0px 15px 0px 15px;
+}
+.nav-list div:hover {
+  opacity: .2;
+}
+.nav-list div a {
+  text-decoration: none;
+  color: black;
+}
+.App-body {
+  margin-top: 10px;
+  display: block;
+
+}
+
+.body-top {
+  animation: fadein 2s;
+  width: 100%;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: 100%; 
+  background-position: center center; 
+  height: 500px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 
+  inset 0px 11px 8px -10px #3a3a3a,
+  inset 0px -11px 8px -10px #3a3a3a; 
+}
+.body-top button {
+  color: black;
+  background-color: #fc7b44;
+  width: 12%;
+  margin: auto;
+  padding: 10px 0 10px 0;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.body-top button:hover {
+  opacity: .5;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.body-bottom {
 
-@keyframes App-logo-spin {
+}
+.body-bottom p {
+  padding: 0;
+  margin: 0;
+}
+/* @keyframes fadein {
   from {
-    transform: rotate(0deg);
+      opacity:0;
   }
   to {
-    transform: rotate(360deg);
+      opacity:1;
   }
-}
+} */
