--- a/Web/pitt-menu/src/css/App.css
+++ b/Web/pitt-menu/src/css/App.css
@@ -1,3 +1,6 @@
+.App {
+  box-shadow: 0px 11px 8px -10px #3a3a3a;
+}
 .App-header {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
