--- a/Web/pitt-menu/src/css/Home.css
+++ b/Web/pitt-menu/src/css/Home.css
@@ -3,19 +3,19 @@
 .body-top {
   width: 100%;
   text-align: center;
-  background: url(../img.jpg) no-repeat center center fixed;
+  /* background: url(../img.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; 
-  background-size: 100% 100%;
+  background-size: 100% 100%; */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  box-shadow: 
+  /* box-shadow: 
   inset 0px 11px 8px -10px #3a3a3a,
-  inset 0px -11px 8px -10px #3a3a3a; 
+  inset 0px -11px 8px -10px #3a3a3a;  */
 }
 .body-top a {
 
@@ -24,8 +24,8 @@
   background-color: #fc7b44;
   width: 12%;
   margin: auto;
-  margin-top: 350px;
-  margin-bottom: 350px;
+  /* margin-top: 100px;
+  margin-bottom: 100px; */
   padding: 10px 0 10px 0;
   display: block;
   text-align: center;
@@ -38,7 +38,35 @@
 .body-top a:hover {
   opacity: .5;
 }
-
+.sv-wrapper{
+  width: 50%;
+  position: relative;
+  margin: 100px auto 0 auto;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.sv-sentence {
+	margin: 0;
+	text-align: left;
+	text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+}
+.sv-sentence span {
+  color: #000;
+	white-space: nowrap;
+	font-size: 200%;
+	font-weight: normal;
+}
+.sv-words {
+  display: inline;
+	text-indent: 10px;
+}
+.sv-words span {
+  position: absolute;
+	opacity: 0;
+	overflow: hidden;
+	width: 100%;
+	color: #6b969d;
+}
 .body-bottom {
   display: flex;
   font-family: Arial, Helvetica, sans-serif
@@ -52,6 +80,83 @@
   text-align: center;
 
 }
+
+
+.slidingVertical{
+	display: inline;
+	text-indent: 8px;
+}
+.slidingVertical span{
+	animation: topToBottom 12.5s linear infinite 0s;
+	-ms-animation: topToBottom 12.5s linear infinite 0s;
+	-webkit-animation: topToBottom 12.5s linear infinite 0s;
+	color: #6b969d;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+.slidingVertical span:nth-child(2){
+	animation-delay: 2.5s;
+	-ms-animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+}
+.slidingVertical span:nth-child(3){
+	animation-delay: 5s;
+	-ms-animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.slidingVertical span:nth-child(4){
+	animation-delay: 7.5s;
+	-ms-animation-delay: 7.5s;
+	-webkit-animation-delay: 7.5s;
+}
+.slidingVertical span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+@keyframes topToBottom {
+  0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: translateY(-50px); }
+	10% { opacity: 1; -moz-transform: translateY(0px); }
+	25% { opacity: 1; -moz-transform: translateY(0px); }
+	30% { opacity: 0; -moz-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+/*topToBottom Animation*/
+@-moz-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: translateY(-50px); }
+	10% { opacity: 1; -moz-transform: translateY(0px); }
+	25% { opacity: 1; -moz-transform: translateY(0px); }
+	30% { opacity: 0; -moz-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-webkit-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -webkit-transform: translateY(-50px); }
+	10% { opacity: 1; -webkit-transform: translateY(0px); }
+	25% { opacity: 1; -webkit-transform: translateY(0px); }
+	30% { opacity: 0; -webkit-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -ms-transform: translateY(-50px); }
+	10% { opacity: 1; -ms-transform: translateY(0px); }
+	25% { opacity: 1; -ms-transform: translateY(0px); }
+	30% { opacity: 0; -ms-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+
+
+
+
 @keyframes fadein {
   from {
       opacity:0;
