--- a/Web/pitt-menu/src/css/App.css
+++ b/Web/pitt-menu/src/css/App.css
@@ -1,12 +1,13 @@
 .App {
   box-shadow: 0px 11px 8px -10px #3a3a3a;
+  
 }
 .App-header {
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     padding-top: 20px;
     padding-bottom: 20px;
+    background-color: #FEFFFF;  
   }
   
   .header-content {
