--- a/Web/pitt-menu/src/css/Home.css
+++ b/Web/pitt-menu/src/css/Home.css
@@ -3,29 +3,25 @@
 .body-top {
   width: 100%;
   text-align: center;
-  /* background: url(../img.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; 
-  background-size: 100% 100%; */
+  background: url(../homeimg.png) no-repeat center center;
+
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+	flex-direction: column;
+	background-color: #3AAFA9;
   /* box-shadow: 
   inset 0px 11px 8px -10px #3a3a3a,
   inset 0px -11px 8px -10px #3a3a3a;  */
 }
 .body-top a {
-
   animation: fadein 2s;
   color: black;
-  background-color: #fc7b44;
+  background-color: #17252A;
   width: 12%;
   margin: auto;
-  /* margin-top: 100px;
-  margin-bottom: 100px; */
+  margin-bottom: 50px;
   padding: 10px 0 10px 0;
   display: block;
   text-align: center;
@@ -33,28 +29,30 @@
   display: inline-block;
   border: 1px solid black;
   border-radius: 10px;
-  font-family: Arial, Helvetica, sans-serif
+	font-family: 'Mukta', sans-serif;
+	font-weight: bold;
+	color: #DEF3F1
 }
 .body-top a:hover {
   opacity: .5;
 }
 .sv-wrapper{
-  width: 50%;
+  
   position: relative;
-  margin: 100px auto 0 auto;
+  margin: 50px auto 0 auto;
   padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Mukta', sans-serif;
+	font-weight: bold;
 }
 .sv-sentence {
 	margin: 0;
 	text-align: left;
-	text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+	color: #17252A;
 }
 .sv-sentence span {
-  color: #000;
 	white-space: nowrap;
 	font-size: 200%;
-	font-weight: normal;
+	font-weight: bold;
 }
 .sv-words {
   display: inline;
@@ -65,7 +63,7 @@
 	opacity: 0;
 	overflow: hidden;
 	width: 100%;
-	color: #6b969d;
+
 }
 .body-bottom {
   display: flex;
@@ -90,7 +88,7 @@
 	animation: topToBottom 12.5s linear infinite 0s;
 	-ms-animation: topToBottom 12.5s linear infinite 0s;
 	-webkit-animation: topToBottom 12.5s linear infinite 0s;
-	color: #6b969d;
+	color: #DEF2F1;
 	opacity: 0;
 	overflow: hidden;
 	position: absolute;
