--- a/Web/pitt-menu/src/css/App.css
+++ b/Web/pitt-menu/src/css/App.css
@@ -1,5 +1,5 @@
 .App {
-  box-shadow: 0px 11px 8px -10px #3a3a3a;
+  box-shadow: 0px 11px 8px -10px black;
   
 }
 .App-header {
@@ -7,7 +7,7 @@
     font-size: 25px;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #FEFFFF;  
+    background-color: #34495e;  
   }
   
   .header-content {
@@ -16,6 +16,7 @@
     justify-content: space-between;
     width: 65%;
     margin: auto;
+    color: white;
   }
   
   .nav-list {
@@ -30,7 +31,7 @@
   }
   .nav-list div a {
     text-decoration: none;
-    color: black;
+    color: white;
   }
   .App-body {
     margin-top: 10px;
