--- a/Web/pitt-menu/src/css/Home.css
+++ b/Web/pitt-menu/src/css/Home.css
@@ -10,15 +10,15 @@
   justify-content: center;
   align-items: center;
 	flex-direction: column;
-	background-color: #3AAFA9;
+	background-color: var(--main-color);
   /* box-shadow: 
   inset 0px 11px 8px -10px #3a3a3a,
   inset 0px -11px 8px -10px #3a3a3a;  */
 }
 .body-top a {
   animation: fadein 2s;
-  color: black;
-  background-color: #17252A;
+  color: var(--text-color-alt);
+  background-color: #2980b9;
   width: 12%;
   margin: auto;
   margin-bottom: 50px;
@@ -27,11 +27,11 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  border: 1px solid black;
-  border-radius: 10px;
+	border-radius: 10px;
+	border: 2px solid black;
 	font-family: 'Mukta', sans-serif;
 	font-weight: bold;
-	color: #DEF3F1
+	color: #ecf0f1;
 }
 .body-top a:hover {
   opacity: .5;
@@ -43,11 +43,13 @@
   padding: 10px;
 	font-family: 'Mukta', sans-serif;
 	font-weight: bold;
+	
 }
 .sv-sentence {
 	margin: 0;
 	text-align: left;
-	color: #17252A;
+	color: var(--text-color-alt);
+	text-shadow: 1px 1px black;
 }
 .sv-sentence span {
 	white-space: nowrap;
@@ -67,7 +69,9 @@
 }
 .body-bottom {
   display: flex;
-  font-family: Arial, Helvetica, sans-serif
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #3498db;
+	
 }
 .body-bottom p {
   padding: 0;
@@ -88,7 +92,8 @@
 	animation: topToBottom 12.5s linear infinite 0s;
 	-ms-animation: topToBottom 12.5s linear infinite 0s;
 	-webkit-animation: topToBottom 12.5s linear infinite 0s;
-	color: #DEF2F1;
+	color: var(--alt-color1);
+	text-shadow: 1px 1px black;
 	opacity: 0;
 	overflow: hidden;
 	position: absolute;
