--- a/Web/pitt-menu/src/css/Menu.css
+++ b/Web/pitt-menu/src/css/Menu.css
@@ -1,26 +1,35 @@
 
 .menu  {
-    
-    background-color: #2B7A78;
-    font-size: 200%;
-    color: #FEFFFF;
+    border: 1px solid black;
     width: 80%;
     margin: auto;
     border-radius: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
 }
+.menu-type {
+    background-color: var(--main-color);
+    font-size: 200%;
+    color: #FFF;
+    z-index: 1;
+    box-shadow: 0px 1px 5px 1px black;
+    position: relative;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 
+}
 .menu-items {
     margin: auto;
-    background-color: #3AAFA9;
+    background-color: #FFF;
     display: flex;
     flex-direction: column;
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
+   z-index: 20
    
 }
 .menu-item {
-    font-size: 70%;
+    font-size: 100%;
     margin: 5px 0 5px 0;
     color: #17252A
+
 }
