--- a/Web/pitt-menu/src/css/index.css
+++ b/Web/pitt-menu/src/css/index.css
@@ -1,3 +1,11 @@
+:root {
+
+    --main-color: #34495e;
+    --alt-color1: #3498db; 
+    --text-color: #000000;
+    --text-color-alt: #FFFFFF;
+
+}
 body {
   margin: 0;
   padding: 0;
