--- a/Web/pitt-menu/src/css/home.css
+++ b/Web/pitt-menu/src/css/home.css
@@ -1,89 +1,86 @@
+.home {
 
-
-.body-top {
-  width: 100%;
-  text-align: center;
-  background: url(../homeimg.png) no-repeat center center;
-
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	flex-direction: column;
-	background-color: var(--main-color);
-  /* box-shadow: 
-  inset 0px 11px 8px -10px #3a3a3a,
-  inset 0px -11px 8px -10px #3a3a3a;  */
 }
-.body-top a {
-  animation: fadein 2s;
-  color: var(--text-color-alt);
-  background-color: #2980b9;
-  width: 12%;
-  margin: auto;
-  margin-bottom: 50px;
-  padding: 10px 0 10px 0;
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-	border-radius: 10px;
-	border: 2px solid black;
-	font-family: 'Mukta', sans-serif;
-	font-weight: bold;
-	color: #ecf0f1;
+
+header {
+    display: flex;
+    justify-content: space-evenly;
+    height: 100vh;
+    background-color: #c0392b;
+    align-items: center;
+    flex-wrap: wrap;
 }
-.body-top a:hover {
-  opacity: .5;
+
+.header-nav {
+    
+    width: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+.header-nav div {
+    background-color: #e87e04;
+    width: 20em;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid white;
+   
+}
+.header-nav div:hover {
+    box-shadow: 10px 10px white;
+}
+.header-nav div a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: white;
+    
+    font-size: 1.5em;
+    
+    
+}
+.today-menu {
+    
 }
 .sv-wrapper{
+      color: white;
+      
+    
+  }
+  .sv-title {
+      color: #f89406;
+        text-decoration: underline;
+  }
+  .sv-sentence {
+      margin: 0;
+      text-align: left;
+      color: white;
+      font-size: 6vmin;
+      width: 100%;
+      
+  }
+  .sv-sentence span {
+      white-space: nowrap;
+    
+      font-family: 'Rubik', sans-serif;
+  }
+  .sv-words {
+    display: inline;
+
+      
+  }
+  .sv-words span {
+    position: absolute;
+      opacity: 0;
+      overflow: hidden;
+     
+      
   
-  position: relative;
-  margin: 50px auto 0 auto;
-  padding: 10px;
-	font-family: 'Mukta', sans-serif;
-	font-weight: bold;
-	
-}
-.sv-sentence {
-	margin: 0;
-	text-align: left;
-	color: var(--text-color-alt);
-}
-.sv-sentence span {
-	white-space: nowrap;
-	font-size: 200%;
-	font-weight: bold;
-}
-.sv-words {
-  display: inline;
-	text-indent: 10px;
-}
-.sv-words span {
-  position: absolute;
-	opacity: 0;
-	overflow: hidden;
-	width: 100%;
-
-}
-.body-bottom {
-  display: flex;
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: #3498db;
-	
-}
-.body-bottom p {
-  padding: 0;
-  margin: 0;
-}
-.body-bottom-left, .body-bottom-right {
-  width: 50%;
-  text-align: center;
-
-}
-
-
-.slidingVertical{
+  }
+  .slidingVertical{
 	display: inline;
 	text-indent: 8px;
 }
@@ -91,10 +88,12 @@
 	animation: topToBottom 12.5s linear infinite 0s;
 	-ms-animation: topToBottom 12.5s linear infinite 0s;
 	-webkit-animation: topToBottom 12.5s linear infinite 0s;
-	color: var(--alt-color1);
+    color: #f89406;
+    text-decoration: underline;
 	opacity: 0;
 	overflow: hidden;
-	position: absolute;
+    position: absolute;
+    
 }
 .slidingVertical span:nth-child(2){
 	animation-delay: 2.5s;
@@ -155,14 +154,18 @@
 	100% { opacity: 0; }
 }
 
-
-
-
-@keyframes fadein {
-  from {
-      opacity:0;
-  }
-  to {
-      opacity:1;
-  }
+footer {
+    position: fixed;
+    right:0;
+    bottom:0;
+}
+footer p {
+    font-size: 20px;
+    color: white;
+    margin-right: 30px;
+}
+footer p a {
+    color: #e87e04;
+    font-weight: bold;
+    font-style: italic;
 }
