--- a/Web/pitt-menu/src/css/index.css
+++ b/Web/pitt-menu/src/css/index.css
@@ -1,41 +1,3 @@
-:root {
-
-    --main-color: #34495e;
-    --alt-color1: #3498db; 
-    --text-color: #000000;
-    --text-color-alt: #FFFFFF;
-
-}
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #FEFFFF;
-  font-family: 'Mukta', sans-serif;
-}
-
-
-.Fade-appear {
-  opacity: 0;
-}
-
-.Fade-appear.Fade-appear-active {
-  opacity: 1;
-  transition: all 0.8s linear;
-}
-.Fade-enter {
-    opacity: 0;
-}
-.Fade-enter.Fade-enter-active {
-    opacity: 1;
-    transition: all 0.6s linear 0.4s;
-}
-.Fade-leave {
-    opacity: 1.0;
-
-}
-.Fade-leave.Fade-leave-active {
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    transition: all 0.6s linear;
+  font-family: 'Rubik', sans-serif;
 }
