--- a/Web/pitt-menu/src/css/home.css
+++ b/Web/pitt-menu/src/css/home.css
@@ -24,45 +24,23 @@ header {
 .header-nav div {
     background-color: #e87e04;
     width: 20em;
-    padding: 20px;
+    
     margin: 10px;
     border: 1px solid white;
     opacity: 0; 
 }
-.header-nav div:hover {
-    box-shadow: 10px 10px white;
-}
 .header-nav div a {
     display: block;
+    color: white;
     width: 100%;
     height: 100%;
-    color: white;
-    
     font-size: 1.5em;
+    padding: 20px 0 20px 0;
     
     
 }
 .today-menu {
     
-}
-.fadeup {
-    opacity: 0;
-    animation-name: fadeInUp;
-    -webkit-animation-name: fadeInUp;
-    animation-duration: 1s;
-    animation-fill-mode: both;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-fill-mode: both
-}
-@keyframes fadeInUp {
-    from {
-        transform: translate3d(0,40px,0)
-    }
-
-    to {
-        transform: translate3d(0,0,0);
-        opacity: 1
-    }
 }
 .sv-wrapper{
       color: white;
