--- a/Web/pitt-menu/src/css/home.css
+++ b/Web/pitt-menu/src/css/home.css
@@ -1,46 +1,61 @@
 .home {
-
+    width: 100%;
+    
 }
 
 header {
     display: flex;
-    justify-content: space-evenly;
-    height: 100vh;
-    background-color: #c0392b;
-    align-items: center;
-    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-color);
+    justify-content: space-between;
+
 }
 
 .header-nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width:35%;
     
-    width: 50%;
+
+}
+.nav-buttons {
+    
+    width: 100%;
+    margin-top: 20px;
+    
+}
+.nav-buttons div {
+    margin: 2vh auto 2vh auto;
+}
+.today-wrapper {
+    width: 90%;
+    color: white;
+    /* text-shadow: 1px 1px var(--not-text-color);s */
+    
+
+}
+.today-wrapper .today-header {
+    color: var(--side-color);
     text-align: center;
+    font-size: 2em;
+    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+    line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+    text-decoration: underline;
+}
+
+.header-text {
+    width: 65%;
+    height: 100vh;
+    background-image: url('../img/img2colorgrey.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-
-}
-.header-nav div {
-    background-color: #e87e04;
-    width: 20em;
-    
-    margin: 10px;
-    border: 1px solid white;
-    opacity: 0; 
-}
-.header-nav div a {
-    display: block;
-    color: white;
-    width: 100%;
-    height: 100%;
-    font-size: 1.5em;
-    padding: 20px 0 20px 0;
-    
-    
-}
-.today-menu {
-    
 }
 .sv-wrapper{
       color: white;
@@ -48,14 +63,17 @@ header {
     
   }
   .sv-title {
-      color: #f89406;
+      color: var(--not-text-color);
         text-decoration: underline;
+        text-shadow: 1px 1px black;
   }
   .sv-sentence {
       margin: 0;
       text-align: left;
       color: white;
-      font-size: 6vmin;
+      text-shadow: 1px 1px black;
+      font-size: 3vw;
+      line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
       width: 100%;
       
   }
@@ -85,7 +103,8 @@ header {
 	animation: topToBottom 12.5s linear infinite 0s;
 	-ms-animation: topToBottom 12.5s linear infinite 0s;
 	-webkit-animation: topToBottom 12.5s linear infinite 0s;
-    color: #f89406;
+    color: var(--not-text-color);
+    text-shadow: 1px 1px black;
     text-decoration: underline;
 	opacity: 0;
 	overflow: hidden;
@@ -123,21 +142,21 @@ header {
 	100% { opacity: 0; }
 }
 /*topToBottom Animation*/
-@-moz-keyframes topToBottom{
-	0% { opacity: 0; }
-	5% { opacity: 0; -moz-transform: translateY(-50px); }
-	10% { opacity: 1; -moz-transform: translateY(0px); }
-	25% { opacity: 1; -moz-transform: translateY(0px); }
-	30% { opacity: 0; -moz-transform: translateY(50px); }
-	80% { opacity: 0; }
-	100% { opacity: 0; }
-}
 @-webkit-keyframes topToBottom{
 	0% { opacity: 0; }
 	5% { opacity: 0; -webkit-transform: translateY(-50px); }
 	10% { opacity: 1; -webkit-transform: translateY(0px); }
 	25% { opacity: 1; -webkit-transform: translateY(0px); }
 	30% { opacity: 0; -webkit-transform: translateY(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-moz-keyframes topToBottom{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: translateY(-50px); }
+	10% { opacity: 1; -moz-transform: translateY(0px); }
+	25% { opacity: 1; -moz-transform: translateY(0px); }
+	30% { opacity: 0; -moz-transform: translateY(50px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
@@ -168,4 +187,28 @@ footer p a {
 footer p a:hover {
     color: white;
    
+}
+
+@media(max-width:768px) {
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .header-text {
+        width: 100%;
+        height: 25vh;
+        max-height: 50%;
+    }
+    .header-nav {
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 90%
+
+
+    }
+    .sv-sentence {
+        font-size: 20px;
+    }
 }
