--- a/Web/pitt-menu/src/css/index.css
+++ b/Web/pitt-menu/src/css/index.css
@@ -1,7 +1,18 @@
 
+:root {
+  --main-color: #2e3131;
+  --side-color: #;
+  --text-color: #FFF;
+  --not-text-color: #22a7f0 ;
+}
 * {
   font-family: 'Rubik', sans-serif;
 }
+html {
+  background-color: var(--main-color);
+}
 body {
   font-family: 'Rubik', sans-serif;
+  background-color: var(--main-color);
+  
 }
