--- a/Web/pitt-menu/src/css/login.css
+++ b/Web/pitt-menu/src/css/login.css
@@ -4,10 +4,14 @@
     height: 100vh;
     background-color: var(--main-color);
     align-items: center;
-    flex-wrap: wrap;
+    
 }
 .login-wrapper .left {
-  width: 50%;
+  width: 35%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .login-wrapper .left h1 {
     font-size: calc(16px + 12*(100vw - 300px)/1300);
@@ -18,21 +22,50 @@
     color: #f89406;
     text-decoration: underline;
 }
-.right {
-    height: 100vh;
-    width: 50%;
+.login-wrapper .right {
+    height: 100%;
+    width: 65%;
     background-image: url('../img/img9colorgrey.jpg');
-   
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.login {
-
+.login-wrapper .right h1  {
+    color: var(--text-color);
+    
+    text-shadow: 1px 1px black;
+    font-size: 3vw;
+    line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
+    width: 80%;
+    font-family: 'Rubik', sans-serif;
     
 }
-
+.login-wrapper .right h1 span {
+    color: var(--not-text-color);
+    text-decoration: underline;
+}
 @media(max-width:768px) {
     .login-wrapper {
-        flex-direction: column;
+        flex-direction: column-reverse;
+        
+    }
+    .login-wrapper .right {
+        width: 100%;
+        height: 30%;
+        
+    }  
+    .login-wrapper .right h1 {
+        font-size: calc(20px + 12*(100vw - 300px)/1300);
+        line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
+        text-align: center;
+    }
+    .login-wrapper .left {
+        width: 100%;
+        height: 70%;
+        display: block;
+        margin-top: 5vh;
+       
     }
 }
