--- a/Web/pitt-menu/src/css/login.css
+++ b/Web/pitt-menu/src/css/login.css
@@ -10,7 +10,8 @@
   width: 35%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 }
 .login-wrapper .left h1 {
