--- a/Web/pitt-menu/src/css/button.css
+++ b/Web/pitt-menu/src/css/button.css
@@ -1,24 +1,26 @@
 .button {
-    background-color: var(--side-color);
-    width: 15vw;
+    background-color: var(--not-text-color);
+    width: 100%;
     height: 4vh;
-   
-  
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 30px;
-    border: 1px solid white;
+    border: 1px solid var(--text-color);
     transition: all .1s ease-in;
-
+    border-radius: 3px;
+    border: 1px solid black;
+   
 }
 .button:hover {
-    border: 1px solid var(--not-text-color);
+    border: 1px solid var(--text-color);
+    /* background-color: var(--side-color); */
+    box-shadow: 0px 0px  1px .5px black;
+    border-radius: 10px;
     /* box-shadow: 0 0 px 0px var(--not-text-color); */
     
 }
 .button p a:hover {
-    color: var(--not-text-color);
+    color: var(--inverse-text-color);
 }
 .button p {
     
@@ -67,8 +69,8 @@
 
 @media(max-width: 768px) {
     .button {
-        width: 15em;
-        height: 3em;
+        
+        
     }
     .button  p a {
         font-size: calc(14px + 12*(100vw - 300px)/1300);
