--- a/Web/pitt-menu/src/css/formwrapper.css
+++ b/Web/pitt-menu/src/css/formwrapper.css
@@ -1,4 +1,4 @@
-.login-wrapper {
+.form-wrapper {
     display: flex;
     justify-content: space-evenly;
     height: 100vh;
@@ -6,29 +6,35 @@
     align-items: center;
     
 }
-.login-wrapper .item-left {
-  width: 35%;
+.form-wrapper .item-left {
+  width: 35vw;
   height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
   
 }
-.login-wrapper .login-header {
-    width: 50%;
-    height: 20%;
-}
-.login-wrapper .item-left h1 {
+
+.form-wrapper .item-right h1 {
     font-size: calc(16px + 12*(100vw - 300px)/1300);
     line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
     color: white;
 }
-.login-wrapper .item-left span {
+.form-wrapper .item-left .form-content {
+    width: 100%;
+    height: 80%;
+    background-color: var(--side-color);
+    padding-top: 100px;
+    border-top: 2px solid black;
   
-    text-decoration: underline;
 }
-.login-wrapper .item-right {
+.form-wrapper .form-header {
+    width: 50%;
+    height: 20%;
+
+}
+.form-wrapper .item-right {
     height: 100%;
     width: 65%;
     background-image: url('../img/img9.jpg');
@@ -39,7 +45,7 @@
     align-items: center;
     border-left: 2px solid black;
 }
-.login-wrapper .item-right h1  {
+.form-wrapper .item-right h1  {
     color: var(--inverse-text-color);
     
     text-shadow: 1px 1px black;
@@ -49,30 +55,34 @@
     font-family: 'Poppins', sans-serif;
     
 }
-.login-wrapper .item-right h1 span {
+.form-wrapper .item-right h1 span {
     color: var(--not-text-color);
     text-decoration: underline;
 }
 @media(max-width:768px) {
-    .login-wrapper {
-        flex-direction: column-reverse;
+    .form-wrapper .item-right {
+        display: none;
+    }
+    .form-wrapper {
+        background-color: var(--side-color);
         
     }
-    .login-wrapper .item-right {
-        width: 100%;
-        height: 30%;
+    .form-wrapper .item-right {
+  
         
     }  
-    .login-wrapper .item-right h1 {
-        font-size: calc(20px + 12*(100vw - 300px)/1300);
-        line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
-        text-align: center;
+    .form-wrapper .item-right h1 {
+        
     }
-    .login-wrapper .item-left {
-        width: 100%;
-        height: 70%;
-        display: block;
-        margin-top: 5vh;
+    .form-wrapper .item-left {
+       width: 100%;
+      
        
+    }
+    .form-wrapper .item-left .form-header {
+        width: 100%;
+    }
+    .form-wrapper .item-left .form-content {
+
     }
 }
