--- a/Web/pitt-menu/src/css/input.css
+++ b/Web/pitt-menu/src/css/input.css
@@ -1,18 +1,21 @@
 .input {
     opacity: 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 20px 0 20px 0;
 }
 .input input {
-    font-family: 'Rubik', sans-serif;
-    margin: 1vh;
+    font-family: 'Lato', sans-serif;
+    width: 100%;
     font-size: calc(10px + 12*(100vw - 300px)/1300);
     line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
-    padding: 10px 0 10px 10px;
+    padding: 10px;
     border: 1px solid white;
-    width: 65%;
+   
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+}
+.input input:focus {
+    border: 1px solid var(--not-text-color);
 }
 .fadeup {
     opacity: 0;
