--- a/Web/pitt-menu/src/css/button.css
+++ b/Web/pitt-menu/src/css/button.css
@@ -1,4 +1,4 @@
-.button {
+.btn {
     background-color: var(--not-text-color);
     width: 100%;
     height: 4vh;
@@ -11,7 +11,7 @@
     border: 1px solid black;
    
 }
-.button:hover {
+.btn:hover {
     border: 1px solid var(--text-color);
     /* background-color: var(--side-color); */
     box-shadow: 0px 0px  1px .5px black;
@@ -19,10 +19,10 @@
     /* box-shadow: 0 0 px 0px var(--not-text-color); */
     
 }
-.button p a:hover {
+.btn p a:hover {
     color: var(--inverse-text-color);
 }
-.button p {
+.btn p {
     
     display:block;
     width: 100%;
@@ -35,7 +35,7 @@
     text-align: center;
     
 }
-.button p  a{
+.btn p  a{
     /* text-shadow: 1px 1px black; */
     display: flex;
     justify-content: center;
@@ -68,11 +68,11 @@
 }
 
 @media(max-width: 768px) {
-    .button {
+    .btn {
         
         
     }
-    .button  p a {
+    .btn  p a {
         font-size: calc(14px + 12*(100vw - 300px)/1300);
         line-height: calc(1.3em + 0.3*(100vw - 300px)/1300);
     }
