--- a/Web/pitt-menu/src/css/fullmenuitem.css
+++ b/Web/pitt-menu/src/css/fullmenuitem.css
@@ -1,39 +1,60 @@
 .full-menu-item-wrapper {
-    width: 100%;
-    margin: auto;
+    background: var(--side-color); 
+    background: linear-gradient(to bottom, var(--side-color) 45%,var(--side-color) 45%,var(--side-color) 45%,var(--main-color) 45%,var(--main-color) 98%);
+    height: 80vh;
     display: flex;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-  
-}
-.full-menu-item-wrapper {
-    background-color: var(--side-color)
-}
-.full-menu-item-wrapper .img-wrapper {
-    width: 35%;
-    padding: 20px;
-}
-.full-menu-item-wrapper .img-wrapper img {
-    width: 100%;
-}
+    flex-direction: row;
+    justify-content: center;
 
-.full-menu-item-wrapper .content-wrapper {
+}
+.full-menu-item-wrapper .title-bar-wrapper {
+    /* background-color: var(--side-color); */
+    color: white;
+    font-size: 1.5vw;
+    width: 70%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    color: white;
-    
-    
-}
-.full-menu-item-wrapper .content-wrapper .content-title {
-    color: white;
-    font-size: 4vw;
-    font-family: 'Lato', sans-serif;
 
-    text-decoration: underline;
+    align-items: flex-start;
 }
-.full-menu-item-wrapper .content-wrapper .content-desc {
-    font-size: 1vw;
+
+.full-menu-item-wrapper .title-bar-wrapper .content-title{
+    font-size: 3vw;
+    margin: 15vh 0 0 0;
 }
-.full-menu-item-wrapper .content-wrapper .content-rating {
+.full-menu-item-wrapper .title-bar-wrapper .content-date {
+ 
+}
+.full-menu-item-wrapper .title-bar-wrapper .content-rating {
     
+}
+.full-menu-item-wrapper .title-bar-wrapper .desc-wrapper {
+  margin: 12vh auto 0 auto;
+  color: black;
+  width: 40vw;
+  
+}
+.full-menu-item-wrapper .desc-wrapper .describe-ta {
+    margin-top: 3vh;
+    border: 1px solid black;
+}
+.full-menu-item-wrapper .img-container {
+  width: 50%;
+    
+    display: Flex;
+    justify-content: center;
+    align-items: center;
+}
+.full-menu-item-wrapper .img-container .img-wrapper {
+    width: 75%;
+    position: relative;
+    z-index: 2;
+    /* margin-bottom: 20vh; */
+    border: 2px solid black;
+   
+}
+
+.comment-container {
+    width: 50%;
+    margin: auto;
 }
