--- a/Web/pitt-menu/src/css/menuitem.css
+++ b/Web/pitt-menu/src/css/menuitem.css
@@ -62,3 +62,11 @@
         opacity: 1
     }
 }
+
+
+@media (max-width: 768px) {
+    .menu-item-wrapper .title-desc-wrapper .title {
+        font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+        line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+    }
+}
