--- a/Web/pitt-menu/src/css/fullmenuitem.css
+++ b/Web/pitt-menu/src/css/fullmenuitem.css
@@ -35,7 +35,8 @@
 }
 .full-menu-item-wrapper .title-bar-wrapper .desc-wrapper .desc {
     margin-bottom: 3vh;
-
+    
+    transition: all .5s ease;
 }
 .full-menu-item-wrapper .desc-wrapper .add-desc {
     width: 40%;
@@ -43,10 +44,11 @@
 }
 .full-menu-item-wrapper .desc-wrapper .describe-ta {
     margin-top: 3vh;
+   
     border: 1px solid black;
     font-size: calc(5px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
-  
+    ;
 }
 .full-menu-item-wrapper .img-container {
     width: 50%;
@@ -88,4 +90,88 @@
 .comment-container {
     width: 50%;
     margin: auto;
+}
+
+@media (max-width: 768px) {
+    .full-menu-item-wrapper {
+        flex-direction: column;
+        background-color: white;
+        background: none;
+        justify-content: flex-start;
+    }
+    .full-menu-item-wrapper .img-container {
+        width: 100vw;
+        height: 30vh;
+        overflow:hidden;
+        margin: 0;
+        box-shadow: -5px 1px 5px 1px black;
+
+    }
+    .full-menu-item-wrapper .img-container .img-wrapper {
+        
+        width: 100%;
+        height: 100%;
+        overflow:hidden;
+        object-fit: cover;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper {
+        width: 100%;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .content-title{
+        font-size: 10vw;
+        width: 100%;
+        color: black;
+        text-align: center;
+        margin-top: 3vh;
+        text-decoration: underline;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .content-rating {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .content-date {
+        font-size: 4vw;
+        width: 100%;
+        color: black;
+        text-align: center;
+
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .desc-wrapper {
+        width: 100%;
+        display: Flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5vh;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .desc-wrapper .desc {
+        width: 80%;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .desc-wrapper .add-desc {
+        width: 100%;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .desc-wrapper .describe-ta {
+        font-size: calc(15px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+        line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+        
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .desc .text-desc {
+        font-size: calc(20px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+        line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .add-image {
+        width: 80%;
+    }
+    .full-menu-item-wrapper .title-bar-wrapper .input-upload {
+        font-size: calc(15px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+        line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+    }
+    .comment-container {
+        width: 95%;
+        margin: 10em auto 0 auto;
+     
+        
+    }
 }
