Updated Readme; Fixed button width issue.

--- a/Web/pitt-menu/src/css/header.css
+++ b/Web/pitt-menu/src/css/header.css
@@ -17,6 +17,7 @@
 }
 .header-wrapper .btn-wrapper div {
     margin: 4px auto 4px auto;
+
 }
 
 .header-wrapper ul {
@@ -56,7 +57,10 @@
        
        
     }
+    .header-wrapper .btn-wrapper div {
+        width: 200px;
+    }
     .header-wrapper .btn-wrapper .button {
-        width: 50vw;
+       
     }
 }
