--- a/Web/pitt-menu/src/css/button.css
+++ b/Web/pitt-menu/src/css/button.css
@@ -1,7 +1,7 @@
 .btn {
     background-color: var(--not-text-color);
     width: 100%;
-    height: 3rem;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,7 +70,6 @@
 @media(max-width: 768px) {
     .btn {
        
-        height: 2rem;
     }
     .btn  p a {
         font-size: calc(14px + 12*(100vw - 300px)/1300);
