--- a/Web/pitt-menu-ts/src/index.scss
+++ b/Web/pitt-menu-ts/src/index.scss
@@ -1,10 +1,16 @@
+
+@font-face {
+  font-family: 'Karla';
+  font-style: normal;
+  src: url('./assets/fonts/Karla-Regular.ttf') format('truetype')
+
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Karla';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 code {
