Login, Signup, Browse Buttons, Mobile Home Screen

--- a/Web/pitt-menu-ts/src/components/menu/menu.scss
+++ b/Web/pitt-menu-ts/src/components/menu/menu.scss
@@ -1,6 +1,14 @@
 .menu-list {
-    height: 75vh;
-    width: 95%;
+    height: 100%;
+    width: 90%;
     margin: auto;
    
 }
+
+
+
+@media (max-width: 1366px) {
+    .menu-list {
+        height: 100%;
+    }
+} 
