--- a/Web/pitt-menu-ts/src/components/item/item.scss
+++ b/Web/pitt-menu-ts/src/components/item/item.scss
@@ -8,7 +8,8 @@
     color: white;
     background-color: #7b1fa2;
   
-    width: 90%;
+    min-width: 300px;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
     transition: opacity 1.5s ease, transform .1s linear, border-radius .1s linear;
@@ -19,7 +20,6 @@
     &:hover {
         transform: scale(1.05);
         background-color:#ae52d4; 
-        border-radius: 10px;
     }
 
     .item-img {
