--- a/Web/pitt-menu-ts/src/pages/home/home.scss
+++ b/Web/pitt-menu-ts/src/pages/home/home.scss
@@ -1,5 +1,7 @@
 
-
+html {
+    background-color: #1f1f1f;
+}
 .container {
 
     width: 100vw;
@@ -7,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1f1f1f;
     
     .content {
         width: 80%;
@@ -15,10 +16,11 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        flex-wrap: wrap;
         .title {
-        
             width: 50%;
+            h1 {
+                font-size: 4rem;
+            }
             h2 {
                
             }
@@ -34,5 +36,23 @@
                 }
             }
         }
+    }
+}
+
+
+@media screen and (max-width: 1366px) {
+    .container {
+        align-items: unset;
+       .content {
+           flex-direction: column;
+           .title {
+            
+                text-align: center;
+                width: 100%;
+           }
+           .menu {
+               width: 100%;
+           }
+       }
     }
 }
